| Bug #28963 | Missing DBUG_RETURN message when stopping event scheduler | ||
|---|---|---|---|
| Submitted: | 7 Jun 2007 23:33 | Modified: | 21 Jun 2007 6:57 |
| Reporter: | Todd Farmer (OCA) | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Stored Routines | Severity: | S3 (Non-critical) |
| Version: | 5.1.18 | OS: | Windows |
| Assigned to: | Konstantin Osipov | CPU Architecture: | Any |
[7 Jun 2007 23:33]
Todd Farmer
[10 Jun 2007 9:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/28474 ChangeSet@1.2541, 2007-06-10 13:16:02+04:00, kostja@bodhi.(none) +1 -0 Fix for Bug#28963 "Missing DBUG_RETURN message when stopping event scheduler". Add missing DBUG_VOID_RETURN
[10 Jun 2007 9:17]
Konstantin Osipov
Queued into 5.1-runtime tree.
[20 Jun 2007 19:53]
Bugs System
Pushed into 5.1.20-beta
[21 Jun 2007 6:57]
Konstantin Osipov
No documentation entry is needed.
