Fix for Bug#28963 "Missing DBUG_RETURN message when stopping event scheduler". Add missing DBUG_VOID_RETURN